# babel_proto

./: Cargo.toml
src/: lib.rs  main.rs
src/assets/maps/: 16x16_proto.json
src/data_parsing/: map_data.rs  mod.rs  player_data.rs
src/data_structs/: dialogue_data.rs  map_data.rs  mod.rs  player_data.rs
src/rendering/: debug_camera.rs  dialogue.rs  first_person.rs  game_menus.rs  maker_sim_menus.rs  minimap.rs  minimap_edit.rs  mod.rs
src/rendering/sickle_widgets/: mod.rs  radio_group.rs
src/states/: map_state.rs  mod.rs
tests/: map_testing.rs
